# clux

./: .env.example  .gitignore  Pipfile  README.md  clux.db  config.py  config.py~  example.db  pyproject.toml  requirements.txt
clux/: __init__.py  admin.py  api.py  auth.py
clux/db/: __init__.py  cli.py  db.py
clux/forms/: user.py
clux/models/: __init__.py  club.py  user.py
clux/static/: admin.css  clux.css
clux/templates/: common_js.html  explore.html  head_css.html  index.html  navbar.html  sidebar.html
clux/templates/layouts/: base.html  home.html
clux/test/: test_factory.py
clux/views/: index.py
docs/: estructura.md  notas.md
